# image-compressor

./: .gitignore  LICENSE  README.md  SECURITY-REVIEW.md  eslint.config.js  image-compressor-agent-prompt.md  image-compressor-roadmap.md  image-compressor-spec.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
design/: feature-plan.md  image-compressor-roadmap.md
docs/: bug-test-brief.md  bug_test_plan.md  cli-and-shell-integration.md
scripts/: build-sidecar.mjs  generate_test_assets.sh  run_bug_tests.sh
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/cli/: Cargo.toml
src-tauri/crates/cli/src/: main.rs  shell.rs
src-tauri/crates/cli/tests/: cli.rs
src-tauri/crates/engine/: Cargo.toml
src-tauri/crates/engine/src/: batch.rs  crop.rs  decode.rs  encode.rs  error.rs  lib.rs  metadata.rs  metrics.rs  model.rs  naming.rs  preview.rs  rename.rs  resize.rs  target.rs  watch.rs
src-tauri/crates/engine/tests/: avif.rs  batch_extra.rs  crop.rs  decode.rs  encode.rs  metadata.rs  metrics.rs  model.rs  mozjpeg_size.rs  naming.rs  preview.rs  rename.rs  resize.rs  target_extra.rs  watch.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  watcher.rs
src/components/: CapControls.tsx  ErrorFallback.tsx  FileRow.tsx  HelpDialog.tsx  Intake.tsx  PresetBar.tsx  Presets.tsx  RunBar.tsx  SamplePreview.tsx  Settings.tsx  SummaryBanner.tsx  WatchPanel.tsx  capControlsExact.test.tsx  controls.test.tsx  tier2.test.tsx  ui.tsx
src/lib/: budget.test.ts  budget.ts  color.test.ts  color.ts  cx.ts  format.test.ts  format.ts  icons.tsx  outcome.test.ts  outcome.ts  presets.test.ts  presets.ts  tauri.ts  theme.ts  thumbnails.ts  types.ts  useCompressor.ts  useSizeEstimates.ts
src/store/: useStore.actions.test.ts  useStore.test.ts  useStore.ts
