[package]
name = "image-compressor"
version = "0.3.0"
description = "Target-size image compressor — compress and resize images to hit a file-size cap."
authors = ["Antti Jakunaho"]
edition = "2021"
rust-version = "1.77"

[lib]
# The `_lib` suffix keeps the lib name distinct from the binary name (a Windows linker quirk).
name = "image_compressor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
engine = { path = "crates/engine" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[workspace]
members = ["crates/engine"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
panic = "abort"
