# Headless CLI (B3). Depends on the pure-Rust `engine` crate only — never on the Tauri app — so the
# same compression code paths back both the GUI and scripting/CI use. `clap` is permissively licensed.
[package]
name = "imgc"
version = "0.5.1"
description = "Headless image compressor — compress images to a target file-size cap from the terminal."
authors = ["Antti Jakunaho"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "imgc"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
clap = { version = "4", features = ["derive"] }

[features]
# Forward the engine's optional trellis-quantized JPEG encoder so release builds of the bundled imgc
# match the GUI's encoder. BUILD-time only (needs NASM + a C compiler); default OFF so `npm run verify`
# stays pure-Rust.
mozjpeg = ["engine/mozjpeg"]

[dev-dependencies]
# Used only by the integration test to synthesize a sample image on disk.
image = "0.25"
