[package]
name = "engine"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust target-size image compression engine (no Tauri/OS-specific code)."
license = "MIT"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "tiff",
] }
fast_image_resize = "5"
rayon = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Pure-Rust AVIF encoder (rav1e) — best compression ratio, slower encode. No C toolchain needed.
ravif = "0.11"
rgb = "0.8"

[dev-dependencies]
# Integration tests (tests/) are a separate crate, so they need `image` and `serde_json`
# declared here to build test images and exercise the serde boundary.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
serde_json = "1"
