[package]
name = "engine"
version = "0.3.3"
edition = "2021"
description = "Pure-Rust target-size image compression engine (no Tauri/OS-specific code)."
license = "MIT"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "tiff",
] }
fast_image_resize = "5"
rayon = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# Pure-Rust AVIF encoder (rav1e). `asm` is disabled so it builds with NO nasm/C toolchain on every
# OS (the spec's clean-build goal) — the trade-off is a slower encode without SIMD assembly.
ravif = { version = "0.11", default-features = false, features = ["threading"] }
rgb = "0.8"
# Pure-Rust lossless PNG optimizer (no C deps with these features).
oxipng = { version = "9", default-features = false, features = ["parallel", "zopfli"] }

[dev-dependencies]
# Integration tests (tests/) are a separate crate, so they need `image` and `serde_json`
# declared here to build test images and exercise the serde boundary.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
serde_json = "1"
